@@ -8,6 +8,7 @@ eglibc (2.10.2-7) UNRELEASED; urgency=low
   * debian/*symbols*: simplify symbol files by using the new #PACKAGE#
     feature.
   * Bump to Standards-Version 3.8.4.
+  * kfreebsd/local-sysdeps.diff: update to revision 2974 (from glibc-bsd).
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 08 Feb 2010 19:20:38 +0100
 
